[gd_scene load_steps=3 format=3 uid="uid://cpx5fm80mnnd5"]

[ext_resource type="Script" uid="uid://bh2jpiv01l5wc" path="res://addons/calendar_button/assets/calendar.gd" id="1_j4ya2"]
[ext_resource type="Script" uid="uid://bp2oqw2fmjb7" path="res://addons/calendar_button/assets/min_box.gd" id="2_rylyo"]

[node name="Calendar" type="Control"]
layout_mode = 3
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 4
size_flags_vertical = 4
script = ExtResource("1_j4ya2")

[node name="PanelContainer" type="PanelContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CalendarContainer" type="VBoxContainer" parent="PanelContainer"]
layout_mode = 2
alignment = 1

[node name="MonthYearContainer" type="HBoxContainer" parent="PanelContainer/CalendarContainer"]
layout_mode = 2
alignment = 1

[node name="PrevButton" type="Button" parent="PanelContainer/CalendarContainer/MonthYearContainer"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
text = "<"

[node name="MonthYear" type="Label" parent="PanelContainer/CalendarContainer/MonthYearContainer"]
layout_mode = 2
text = "MonthYear"

[node name="NextButton" type="Button" parent="PanelContainer/CalendarContainer/MonthYearContainer"]
custom_minimum_size = Vector2(16, 0)
layout_mode = 2
text = ">"

[node name="Dates" type="GridContainer" parent="PanelContainer/CalendarContainer"]
layout_mode = 2
columns = 7

[node name="Time" type="VBoxContainer" parent="PanelContainer/CalendarContainer"]
layout_mode = 2
alignment = 1

[node name="HSeparator" type="HSeparator" parent="PanelContainer/CalendarContainer/Time"]
layout_mode = 2

[node name="Label" type="Label" parent="PanelContainer/CalendarContainer/Time"]
layout_mode = 2
text = "Time"
horizontal_alignment = 1

[node name="LabelContainer" type="HBoxContainer" parent="PanelContainer/CalendarContainer/Time"]
layout_mode = 2
alignment = 1

[node name="Label" type="Label" parent="PanelContainer/CalendarContainer/Time/LabelContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Hour"
horizontal_alignment = 1

[node name="Label2" type="Label" parent="PanelContainer/CalendarContainer/Time/LabelContainer"]
layout_mode = 2
size_flags_horizontal = 3
text = "Minute"
horizontal_alignment = 1

[node name="TimeContainer" type="HBoxContainer" parent="PanelContainer/CalendarContainer/Time"]
layout_mode = 2
alignment = 1

[node name="HourBox" type="SpinBox" parent="PanelContainer/CalendarContainer/Time/TimeContainer"]
layout_mode = 2
max_value = 23.0
value = 1.0
rounded = true
alignment = 1
update_on_text_changed = true
select_all_on_focus = true

[node name="Label" type="Label" parent="PanelContainer/CalendarContainer/Time/TimeContainer"]
layout_mode = 2
text = ":"

[node name="MinBox" type="SpinBox" parent="PanelContainer/CalendarContainer/Time/TimeContainer"]
layout_mode = 2
max_value = 59.0
value = 1.0
rounded = true
alignment = 1
update_on_text_changed = true
select_all_on_focus = true
script = ExtResource("2_rylyo")

[node name="AmPmContainer" type="HBoxContainer" parent="PanelContainer/CalendarContainer/Time"]
layout_mode = 2
alignment = 1

[node name="AmLabel" type="Label" parent="PanelContainer/CalendarContainer/Time/AmPmContainer"]
layout_mode = 2
text = "AM"

[node name="CheckButton" type="CheckButton" parent="PanelContainer/CalendarContainer/Time/AmPmContainer"]
layout_mode = 2

[node name="PmLabel" type="Label" parent="PanelContainer/CalendarContainer/Time/AmPmContainer"]
layout_mode = 2
text = "PM"

[node name="HSeparator2" type="HSeparator" parent="PanelContainer/CalendarContainer"]
layout_mode = 2

[node name="OkButton" type="Button" parent="PanelContainer/CalendarContainer"]
layout_mode = 2
text = "Ok"
